SEO meta updated, Contact no updated, Social media link added

--- a/services/index.html
+++ b/services/index.html
@@ -4,6 +4,40 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="csrf-token" content="wSt1TzBDzNP5fsD2UIj9pWA5Q7aQEqYaAUAQxoRy">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+
+	<meta name="description"
+			content="Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.">
+	<link rel="canonical" href="https://duradars.com/services>
+<meta name="keywords" content="duradars, protection, Vulnerability Assessment and Penetration Testing, VAPT, Compliance and Regulatory Audit, Open Source Intelligence, OSINT, Security Monitoring, Cybersecurity Awareness and Training Campaigns, Web Development, real time detection, cyber security, Privacy, Identity, Cybersecurity Services, Network Security, IT Security Solutions, Data Protection, Penetration Testing, Ransomware Protection, Cloud Security, Threat Intelligence, SOC, Vulnerability Assessment" />
+	<meta name="publisher" content="https://duradars.com/services">
+	<meta name="copyright" content="Copyright (c) Duradars" />
+	<meta name="author" content="Duradars" />
+	<meta name="contact" content="team@duradars.com" />
+
+	<meta name="revisit-after" content="7 Days" />
+	<meta name="robots" content="index, follow" />
+	<meta name="googlebot" content="index, follow" />
+	<meta name="subjects" content="Duradars | Your trusted partner in cybersecurity." />
+	<meta name="classification" content="Duradars Cybersecurity" />
+
+	<meta itemprop="name" content="Duradars | Your trusted partner in cybersecurity.">
+	<meta itemprop="description"
+			content="Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.">
+	<meta itemprop="image" content="assets/logo.webp">
+
+
+	<meta property="og:title" content="Duradars | Your trusted partner in cybersecurity." />
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="https://duradars.com/services" />
+	<meta property="og:image" content="assets/logo.webp" />
+	<meta property="og:site_name" content="Duradars">
+	<meta property=" og:description"
+			content="Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.">
+			
+			<link rel="icon" type="image/jpeg" href="/assets/icon-bro-CankwgKx.jpeg">
 	<title>Services &#8211; Duradars</title>
 	<meta name='robots' content='max-image-preview:large' />
 	<style>
@@ -1796,7 +1830,7 @@
 												<div class="box-body">
 													<h3 class="elementskit-info-box-title">
 														Phone: </h3>
-													<p>+91 9601130211</p>
+													<p>+91 91577 05809</p>
 												</div>
 
 
@@ -1868,47 +1902,32 @@
 									<p>At Duradars, we are dedicated to empowering businesses with robust cybersecurity solutions tailored to their unique needs. With a focus on innovation, reliability, and customer satisfaction, we strive to exceed expectations and deliver peace of mind in an ever-evolving digital landscape.</p>
 								</div>
 							</div>
-							<!-- <div
+							<div
 								class="elementor-element elementor-element-59424a8 e-grid-align-left elementor-shape-rounded elementor-grid-0 elementor-widget elementor-widget-social-icons"
 								data-id="59424a8" data-element_type="widget" data-widget_type="social-icons.default">
 								<div class="elementor-widget-container">
 									<div class="elementor-social-icons-wrapper elementor-grid">
 										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-fe5f184"
-												target="_blank">
+											<a href="https://www.facebook.com/share/v/18pRXcihFS/" class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-fe5f184"
+												target="_blank" style="font-size: var(--icon-size, 25px); height: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em)); line-height: var(--icon-size, 25px); width: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em));">
 												<span class="elementor-screen-only">Facebook</span>
-												<svg class="e-font-icon-svg e-fab-facebook" viewBox="0 0 512 512"
-													xmlns="http://www.w3.org/2000/svg">
-													<path
-														d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z">
-													</path>
-												</svg> </a>
+												<i style="top: 25%; left: 20%;" class="fab fa-facebook-f"></i></a>
 										</span>
 										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-repeater-item-e5cc8c8"
-												target="_blank">
-												<span class="elementor-screen-only">X-twitter</span>
-												<svg class="e-font-icon-svg e-fab-x-twitter" viewBox="0 0 512 512"
-													xmlns="http://www.w3.org/2000/svg">
-													<path
-														d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z">
-													</path>
-												</svg> </a>
+											<a href="https://www.instagram.com/p/DHleHAuyWni/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-e5cc8c8"
+												target="_blank" style="font-size: var(--icon-size, 25px); height: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em)); line-height: var(--icon-size, 25px); width: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em));">
+												<span class="elementor-screen-only">Instagram</span>
+												<i style="top: 25%; left: 20%;" class="fab fa-instagram"></i></a>
 										</span>
 										<span class="elementor-grid-item">
-											<a class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-repeater-item-dbb0c58"
-												target="_blank">
+											<a href="https://www.linkedin.com/company/duradars-pvt-ltd" class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-repeater-item-dbb0c58"
+												target="_blank" style="font-size: var(--icon-size, 25px); height: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em)); line-height: var(--icon-size, 25px); width: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em));">
 												<span class="elementor-screen-only">Linkedin</span>
-												<svg class="e-font-icon-svg e-fab-linkedin" viewBox="0 0 448 512"
-													xmlns="http://www.w3.org/2000/svg">
-													<path
-														d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z">
-													</path>
-												</svg> </a>
+												<i style="top: 25%; left: 20%;" class="fab fa-linkedin-in"></i></a>
 										</span>
 									</div>
 								</div>
-							</div> -->
+							</div>
 						</div>
 					</div>
 				</div>
