contact form functionality started

--- a/process/index.html
+++ b/process/index.html
@@ -1300,13 +1300,13 @@
 								<div class="elementor-widget-container">
 									<div class="elementor-social-icons-wrapper elementor-grid">
 										<span class="elementor-grid-item">
-											<a href="https://www.facebook.com/share/v/18pRXcihFS/" class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-fe5f184"
+											<a href="https://www.facebook.com/people/Duradars-PvtLtd/61573901277356/" class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-fe5f184"
 												target="_blank">
 												<span class="elementor-screen-only">Facebook</span>
 												<i class="fab fa-facebook-f"></i></a>
 										</span>
 										<span class="elementor-grid-item">
-											<a href="https://www.instagram.com/p/DHleHAuyWni/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-e5cc8c8"
+											<a href="https://www.instagram.com/duradars_pvt_ltd/" class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-e5cc8c8"
 												target="_blank">
 												<span class="elementor-screen-only">Instagram</span>
 												<i class="fab fa-instagram"></i></a>
