--- a/index.html
+++ b/index.html
@@ -950,24 +950,23 @@
 						class="elementor-element elementor-element-130d849 elementor-view-stacked elementor-vertical-align-middle elementor-widget__width-initial elementor-hidden-mobile elementor-position-left elementor-shape-circle elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
 						data-id="130d849" data-element_type="widget" data-widget_type="icon-box.default">
 						<div class="elementor-widget-container">
-							<div class="elementor-icon-box-wrapper">
+							<a href="https://wa.me/9157705809" target="_blank" class="elementor-icon-box-wrapper">
 
 								<div class="elementor-icon-box-icon">
 									<span class="elementor-icon">
-										<i class="fal fa-shield-check"></i></span>
+										<i class="fab fa-whatsapp"></i></span>
 								</div>
 
 								<div class="elementor-icon-box-content">
 
 									<h3 class="elementor-icon-box-title">
-										<span>
-											Proven protection </span>
+										<span>+91 91577 05809</span>
 									</h3>
 
 
 								</div>
 
-							</div>
+							</a>
 						</div>
 					</div>
 					<!-- <div class="elementor-element elementor-element-6b0f092 e-con-full e-flex e-con e-child" data-id="6b0f092"
@@ -3680,13 +3679,13 @@
 								<div class="elementor-widget-container">
 									<div class="elementor-social-icons-wrapper elementor-grid">
 										<span class="elementor-grid-item">
-											<a href="https://www.facebook.com/share/v/18pRXcihFS/" class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-fe5f184"
+											<a href="https://www.facebook.com/people/Duradars-PvtLtd/61573901277356/" class="elementor-icon elementor-social-icon elementor-social-icon-facebook elementor-repeater-item-fe5f184"
 												target="_blank">
 												<span class="elementor-screen-only">Facebook</span>
 												<i class="fab fa-facebook-f"></i></a>
 										</span>
 										<span class="elementor-grid-item">
-											<a href="https://www.instagram.com/p/DHleHAuyWni/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-e5cc8c8"
+											<a href="https://www.instagram.com/duradars_pvt_ltd/" class="elementor-icon elementor-social-icon elementor-social-icon-instagram elementor-repeater-item-e5cc8c8"
 												target="_blank">
 												<span class="elementor-screen-only">Instagram</span>
 												<i class="fab fa-instagram"></i></a>
