contact form functionality started

--- a/services/index.html
+++ b/services/index.html
@@ -1925,6 +1925,16 @@
 												<span class="elementor-screen-only">Linkedin</span>
 												<i style="top: 25%; left: 20%;" class="fab fa-linkedin-in"></i></a>
 										</span>
+
+										<span class="elementor-grid-item">
+											<a href="https://wa.me/9157705809"
+												class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-repeater-item-dbb0c58"
+												target="_blank"
+												style="font-size: var(--icon-size, 25px); height: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em)); line-height: var(--icon-size, 25px); width: calc(var(--icon-size, 25px) + 2* var(--icon-padding, .5em));">
+												<span class="elementor-screen-only">Whatsapp</span>
+												<i style="top: 25%; left: 20%;" class="fab fa-whatsapp"></i></a>
+										</span>
+
 									</div>
 								</div>
 							</div>
