--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
 				</div>
 				<div class="elementor-element elementor-element-0f9650f e-con-full e-flex e-con e-child" data-id="0f9650f"
 					data-element_type="container">
-					<div
+					<!-- <div
 						class="elementor-element elementor-element-130d849 elementor-view-stacked elementor-vertical-align-middle elementor-widget__width-initial elementor-hidden-mobile elementor-position-left elementor-shape-circle elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
 						data-id="130d849" data-element_type="widget" data-widget_type="icon-box.default">
 						<div class="elementor-widget-container">
@@ -968,7 +968,7 @@
 
 							</a>
 						</div>
-					</div>
+					</div> -->
 					<!-- <div class="elementor-element elementor-element-6b0f092 e-con-full e-flex e-con e-child" data-id="6b0f092"
 						data-element_type="container" data-settings="{&quot;background_background&quot;:&quot;classic&quot;}">
 						<div class="elementor-element elementor-element-7bbf218 e-con-full e-flex e-con e-child" data-id="7bbf218"
@@ -3695,6 +3695,12 @@
 												target="_blank">
 												<span class="elementor-screen-only">Linkedin</span>
 												<i class="fab fa-linkedin-in"></i></a>
+										</span>
+										<span class="elementor-grid-item">
+											<a href="https://wa.me/9157705809" class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-repeater-item-dbb0c58"
+												target="_blank">
+												<span class="elementor-screen-only">Whatsapp</span>
+												<i class="fab fa-whatsapp"></i></a>
 										</span>
 									</div>
 								</div>
