--- a/process/index.html
+++ b/process/index.html
@@ -1317,6 +1317,12 @@
 												<span class="elementor-screen-only">Linkedin</span>
 												<i class="fab fa-linkedin-in"></i></a>
 										</span>
+										<span class="elementor-grid-item">
+											<a href="https://wa.me/9157705809" class="elementor-icon elementor-social-icon elementor-social-icon-linkedin elementor-repeater-item-dbb0c58"
+												target="_blank">
+												<span class="elementor-screen-only">Whatsapp</span>
+												<i class="fab fa-whatsapp"></i></a>
+										</span>
 									</div>
 								</div>
 							</div>
