--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description"
         content="Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.">
     <link rel="canonical" href="https://duradars.com">
-<meta name="keywords" content="duradars, protection, Vulnerability Assessment and Penetration Testing, VAPT, Compliance and Regulatory Audit, Open Source Intelligence, OSINT, Security Monitoring, Cybersecurity Awareness and Training Campaigns, Web Development, real time detection, cyber security, Privacy, Identity, Cybersecurity Services, Network Security, IT Security Solutions, Data Protection, Penetration Testing, Ransomware Protection, Cloud Security, Threat Intelligence, SOC, Vulnerability Assessment" />
+<meta name="keywords" content="9157705809, duradars, protection, Vulnerability Assessment and Penetration Testing, VAPT, Compliance and Regulatory Audit, Open Source Intelligence, OSINT, Security Monitoring, Cybersecurity Awareness and Training Campaigns, Web Development, real time detection, cyber security, Privacy, Identity, Cybersecurity Services, Network Security, IT Security Solutions, Data Protection, Penetration Testing, Ransomware Protection, Cloud Security, Threat Intelligence, SOC, Vulnerability Assessment" />
     <meta name="publisher" content="https://duradars.com">
     <meta name="copyright" content="Copyright (c) Duradars" />
     <meta name="author" content="Duradars" />
@@ -775,6 +775,184 @@
 			}
 		}
 	</style>
+
+<script type="application/ld+json">
+	{
+		"@context": "http://schema.org",
+		"@type": "Organization",
+		"name": "Duradars",
+		"disambiguatingDescription": "Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.",
+		"description": "Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.",
+		"image": "https://duradars.com/assets/logo.webp",
+		"logo": "https://duradars.com/assets/logo.webp",
+		"url": "https://duradars.com",
+		"telephone": "+91-9157705809",
+		"sameAs": [
+			"https://www.facebook.com/people/Duradars-PvtLtd/61573901277356/",
+			"https://www.instagram.com/duradars_pvt_ltd/",
+			"https://www.linkedin.com/company/duradars-pvt-ltd"
+		],
+		"address": {
+			"@type": "PostalAddress",
+			"addressLocality": "Ahmedabad,
+			"postalCode": "382481",
+			"addressCountry": "India"
+		},
+		"location": {
+			"@type": "Place",
+			"address": {
+				"@type": "PostalAddress",
+				"addressLocality": "Ahmedabad",
+				"postalCode": "382481",
+				"addressCountry": "India"
+			}
+		},
+		"audience": [
+			{
+				"@type": "Audience",
+				"name": "businesses"
+			},
+			{
+				"@type": "Audience",
+				"name": "entrepreneurs"
+			},
+			{
+				"@type": "Audience",
+				"name": "startups"
+			},
+			{
+				"@type": "Audience",
+				"name": "digital marketers"
+			},
+			{
+				"@type": "Audience",
+				"name": "tech enthusiasts"
+			}
+		],
+		"founder": {
+			"@type": "Person",
+			"name": "Tarun Sharma",
+		},
+		"foundingDate": "2025",
+		"areaServed": "Worldwide",
+		"employee": {
+			"@type": "Person",
+			"name": "Tarun Sharma",
+			"jobTitle": "CEO"
+		},
+		"makesOffer": [
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "VAPT (Vulnerability Assessment and Penetration Testing)",
+					"description": "Identify and fix vulnerabilities in your systems before hackers can exploit them."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Security Audits",
+					"description": "Comprehensive security audits to identify potential risks and ensure compliance."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Compliance Services",
+					"description": "Ensure your business complies with industry standards and regulations."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Advanced Threat Detection",
+					"description": "Detect and respond to advanced cyber threats in real-time."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Network Security & Firewalls",
+					"description": "Protect your network with advanced firewalls and security measures."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Data Encryption & Privacy",
+					"description": "Secure your sensitive data with encryption and privacy solutions."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Risk Assessment & Compliance",
+					"description": "Assess risks and ensure compliance with industry regulations."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "24/7 Security Monitoring",
+					"description": "Continuous monitoring to detect and respond to threats 24/7."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Incident Response & Forensics",
+					"description": "Rapid response and forensic analysis in case of security incidents."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Cyber Threat Intelligence",
+					"description": "Stay ahead of threats with actionable intelligence."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Security Awareness Training",
+					"description": "Educate your team on cybersecurity best practices."
+				}
+			},
+			{
+				"@type": "Offer",
+				"itemOffered": {
+					"@type": "Service",
+					"name": "Web Development",
+					"description": "Crafting responsive, user-friendly, and high-performance websites tailored to your business needs."
+				}
+			}
+		],
+		"aggregateRating": {
+			"@type": "AggregateRating",
+			"ratingValue": "4.5",
+			"reviewCount": "24"
+		},
+		"alternateName": [
+			"Duradars",
+			"Duradars Pvt",
+			"Duradars Pvt Ltd"
+		],
+		"slogan": "Securing your peace of mind, one click 👆 at a time",
+		"legalName": "Duradars Pvt Ltd",
+	}
+	</script>
+
 </head>
 
 <body
