--- a/services/index.html
+++ b/services/index.html
@@ -11,7 +11,7 @@
 	<meta name="description"
 			content="Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.">
 	<link rel="canonical" href="https://duradars.com/services>
-<meta name="keywords" content="duradars, protection, Vulnerability Assessment and Penetration Testing, VAPT, Compliance and Regulatory Audit, Open Source Intelligence, OSINT, Security Monitoring, Cybersecurity Awareness and Training Campaigns, Web Development, real time detection, cyber security, Privacy, Identity, Cybersecurity Services, Network Security, IT Security Solutions, Data Protection, Penetration Testing, Ransomware Protection, Cloud Security, Threat Intelligence, SOC, Vulnerability Assessment" />
+	<meta name="keywords" content="9157705809, duradars, protection, Vulnerability Assessment and Penetration Testing, VAPT, Compliance and Regulatory Audit, Open Source Intelligence, OSINT, Security Monitoring, Cybersecurity Awareness and Training Campaigns, Web Development, real time detection, cyber security, Privacy, Identity, Cybersecurity Services, Network Security, IT Security Solutions, Data Protection, Penetration Testing, Ransomware Protection, Cloud Security, Threat Intelligence, SOC, Vulnerability Assessment" />
 	<meta name="publisher" content="https://duradars.com/services">
 	<meta name="copyright" content="Copyright (c) Duradars" />
 	<meta name="author" content="Duradars" />
