--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 		],
 		"address": {
 			"@type": "PostalAddress",
-			"addressLocality": "Ahmedabad,
+			"addressLocality": "Ahmedabad",
 			"postalCode": "382481",
 			"addressCountry": "India"
 		},
