--- a/index.html
+++ b/index.html
@@ -781,7 +781,6 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "Duradars",
-		"disambiguatingDescription": "Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.",
 		"description": "Duradars: Welcome to Duradars, your trusted partner in cybersecurity. Explore our services and empower your online presence with confidence.",
 		"image": "https://duradars.com/assets/logo.webp",
 		"logo": "https://duradars.com/assets/logo.webp",
@@ -798,48 +797,26 @@
 			"postalCode": "382481",
 			"addressCountry": "India"
 		},
-		"location": {
-			"@type": "Place",
-			"address": {
-				"@type": "PostalAddress",
-				"addressLocality": "Ahmedabad",
-				"postalCode": "382481",
-				"addressCountry": "India"
-			}
-		},
 		"audience": [
-			{
-				"@type": "Audience",
-				"name": "businesses"
-			},
-			{
-				"@type": "Audience",
-				"name": "entrepreneurs"
-			},
-			{
-				"@type": "Audience",
-				"name": "startups"
-			},
-			{
-				"@type": "Audience",
-				"name": "digital marketers"
-			},
-			{
-				"@type": "Audience",
-				"name": "tech enthusiasts"
-			}
+			{ "@type": "Audience", "name": "businesses" },
+			{ "@type": "Audience", "name": "entrepreneurs" },
+			{ "@type": "Audience", "name": "startups" },
+			{ "@type": "Audience", "name": "digital marketers" },
+			{ "@type": "Audience", "name": "tech enthusiasts" }
 		],
 		"founder": {
 			"@type": "Person",
-			"name": "Tarun Sharma",
+			"name": "Tarun Sharma"
 		},
 		"foundingDate": "2025",
 		"areaServed": "Worldwide",
-		"employee": {
-			"@type": "Person",
-			"name": "Tarun Sharma",
-			"jobTitle": "CEO"
-		},
+		"employee": [
+			{
+				"@type": "Person",
+				"name": "Tarun Sharma",
+				"jobTitle": "CEO"
+			}
+		],
 		"makesOffer": [
 			{
 				"@type": "Offer",
@@ -948,9 +925,10 @@
 			"Duradars Pvt",
 			"Duradars Pvt Ltd"
 		],
-		"slogan": "Securing your peace of mind, one click 👆 at a time",
-		"legalName": "Duradars Pvt Ltd",
+		"slogan": "Securing your peace of mind, one secure click at a time",
+		"legalName": "Duradars Pvt Ltd"
 	}
+	
 	</script>
 
 </head>
