--- a/contact/index.html
+++ b/contact/index.html
@@ -508,11 +508,16 @@
 		}
 
 
+		.my-container{
+			display: flex;
+			justify-content: center;
+		}
+
 		.my-form-container {
-			/* min-width: 500px; */
-			margin: 0 auto;
+			flex: 1;
+			max-width: 550px;
 			border: 1px solid #ccc;
-			border-radius: 5px;
+			border-radius: 10px;
 			background-color: #f9f9f9;
 			padding: 20px;
 			z-index: 1;
@@ -959,29 +964,30 @@
 					</div>
 				</div>
 
-
-				<div class="my-form-container">
-					<h2>Contact Us</h2>
-					<!-- <form> -->
-					<div class="form-group">
-						<label for="name">Your Name:</label>
-						<input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
+				<div class="my-container">
+					<div class="my-form-container">
+						<h2>Contact Us</h2>
+						<!-- <form> -->
+						<div class="form-group">
+							<label for="name">Your Name:</label>
+							<input type="text" id="name" name="name" class="form-control" placeholder="Your Name" required>
+						</div>
+						<div class="form-group">
+							<label for="email">Enter Email:</label>
+							<input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" required>
+						</div>
+						<div class="form-group">
+							<label for="phone">Mobile No.:</label>
+							<input type="tel" id="phone" name="phone" class="form-control" placeholder="Mobile No." required>
+						</div>
+						<div class="form-group">
+							<label for="message">Write Message:</label>
+							<textarea id="message" name="message" class="form-control" placeholder="Write Message:" rows="5"
+								required></textarea>
+						</div>
+						<button type="submit" onclick="handleContact()" class="submit-btn">Send Message</button>
+						<!-- </form> -->
 					</div>
-					<div class="form-group">
-						<label for="email">Enter Email:</label>
-						<input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" required>
-					</div>
-					<div class="form-group">
-						<label for="phone">Mobile No.:</label>
-						<input type="tel" id="phone" name="phone" class="form-control" placeholder="Mobile No." required>
-					</div>
-					<div class="form-group">
-						<label for="message">Write Message:</label>
-						<textarea id="message" name="message" class="form-control" placeholder="Write Message:" rows="5"
-							required></textarea>
-					</div>
-					<button type="submit" onclick="handleContact()" class="submit-btn">Send Message</button>
-					<!-- </form> -->
 				</div>
 
 
