contact form design updated

--- a/contact/index.html
+++ b/contact/index.html
@@ -508,6 +508,11 @@
 		}
 
 
+		.e-con-inner{
+			padding-left: 15px !important;
+			padding-right: 15px !important;
+		}
+
 		.my-container{
 			display: flex;
 			justify-content: center;
