--- a/about/index.html
+++ b/about/index.html
@@ -806,11 +806,37 @@
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-14 current_page_item menu-item-52 nav-item elementskit-mobile-builder-content active"
 													data-vertical-menu=750px><a href="/about/"
 														class="ekit-menu-nav-link active">About</a></li>
-												<li id="menu-item-58"
-													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-58 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
-													data-vertical-menu=750px><a href="/services/"
-														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Services</a>
-												</li>
+														<li id="menu-item-58"
+														class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-58 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
+														data-vertical-menu=750px><a href="/services/" style="color:#ffffff;"
+															class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Services &nbsp; <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"/></svg> </a>
+														<ul class="elementskit-dropdown elementskit-submenu-panel" style="min-width: 350px;">
+															<li id="menu-item-56"
+																class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+																data-vertical-menu=750px><a href="/services/VAPT/"
+																	class=" dropdown-item">VAPT</a></li>
+															<li id="menu-item-56"
+																class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+																data-vertical-menu=750px><a href="/services/Compliance-and-Regulatory-Audit/"
+																	class=" dropdown-item">Compliance and Regulatory Audit</a></li>
+															<li id="menu-item-56"
+																class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+																data-vertical-menu=750px><a href="/services/OSINT/"
+																	class=" dropdown-item">OSINT</a></li>
+															<li id="menu-item-56"
+																class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+																data-vertical-menu=750px><a href="/services/Security-Monitoring/"
+																	class=" dropdown-item">Security Monitoring</a></li>
+															<li id="menu-item-56"
+																class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+																data-vertical-menu=750px><a href="/services/Cybersecurity-Awareness-Campaign-and-Training/"
+																	class=" dropdown-item">Cybersecurity Awareness and Training Campaigns</a></li>
+															<li id="menu-item-56"
+																class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+																data-vertical-menu=750px><a href="/services/Web-Development/"
+																	class=" dropdown-item">Web Development</a></li>
+														</ul>
+													</li>
 												<li id="menu-item-59"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-59 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="/process/"
@@ -1054,7 +1080,7 @@
 								data-id="d1f2424" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="#" class="ekit_global_links">
+										<span class="ekit_global_links">
 											<!-- end link opening -->
 
 											<div
@@ -1071,7 +1097,7 @@
 
 
 											</div>
-										</a>
+										</span>
 									</div>
 								</div>
 							</div>
@@ -1080,9 +1106,8 @@
 								data-id="4be7e02" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="#" class="ekit_global_links">
+										<a href="mailto:team@duradars.com" class="ekit_global_links">
 											<!-- end link opening -->
-
 											<div
 												class="elementskit-infobox text- text-left icon-lef-right-aligin elementor-animation- media  ">
 												<div class="elementskit-box-header elementor-animation-">
@@ -1107,7 +1132,7 @@
 								data-id="3f91672" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="#" class="ekit_global_links">
+										<a href="tel:+919157705809" class="ekit_global_links">
 											<!-- end link opening -->
 
 											<div
