--- a/contact/index.html
+++ b/contact/index.html
@@ -843,10 +843,36 @@
 												<li id="menu-item-49"
 													class="menu-item menu-item-type-post_type menu-item-object-page menu-item-49 nav-item elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="/about/" class="ekit-menu-nav-link">About</a></li>
-												<li id="menu-item-58"
-													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-58 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
-													data-vertical-menu=750px><a href="/services/"
-														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Services</a>
+													<li id="menu-item-58"
+													class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-58 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
+													data-vertical-menu=750px><a href="/services/" style="color:#ffffff;"
+														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Services &nbsp; <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"/></svg> </a>
+													<ul class="elementskit-dropdown elementskit-submenu-panel" style="min-width: 350px;">
+														<li id="menu-item-56"
+															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+															data-vertical-menu=750px><a href="/services/VAPT/"
+																class=" dropdown-item">VAPT</a></li>
+														<li id="menu-item-56"
+															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+															data-vertical-menu=750px><a href="/services/Compliance-and-Regulatory-Audit/"
+																class=" dropdown-item">Compliance and Regulatory Audit</a></li>
+														<li id="menu-item-56"
+															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+															data-vertical-menu=750px><a href="/services/OSINT/"
+																class=" dropdown-item">OSINT</a></li>
+														<li id="menu-item-56"
+															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+															data-vertical-menu=750px><a href="/services/Security-Monitoring/"
+																class=" dropdown-item">Security Monitoring</a></li>
+														<li id="menu-item-56"
+															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+															data-vertical-menu=750px><a href="/services/Cybersecurity-Awareness-Campaign-and-Training/"
+																class=" dropdown-item">Cybersecurity Awareness and Training Campaigns</a></li>
+														<li id="menu-item-56"
+															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
+															data-vertical-menu=750px><a href="/services/Web-Development/"
+																class=" dropdown-item">Web Development</a></li>
+													</ul>
 												</li>
 												<li id="menu-item-59"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-59 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
@@ -1127,6 +1153,7 @@
 			</div>
 		</div>
 	</div>
+	
 	<div class="ekit-template-content-markup ekit-template-content-footer ekit-template-content-theme-support">
 		<div data-elementor-type="wp-post" data-elementor-id="1365" class="elementor elementor-1365">
 			<div class="elementor-element elementor-element-25414c7 e-flex e-con-boxed e-con e-parent" data-id="25414c7"
@@ -1134,6 +1161,7 @@
 				<div class="e-con-inner">
 					<div class="elementor-element elementor-element-a627fdc e-con-full e-flex e-con e-child" data-id="a627fdc"
 						data-element_type="container">
+
 						<div class="elementor-element elementor-element-d4f2919 e-con-full e-flex e-con e-child" data-id="d4f2919"
 							data-element_type="container">
 							<div class="elementor-element elementor-element-dcd8cd4 elementor-widget elementor-widget-heading"
@@ -1147,7 +1175,7 @@
 								data-id="d1f2424" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="#" class="ekit_global_links">
+										<span class="ekit_global_links">
 											<!-- end link opening -->
 
 											<div
@@ -1164,7 +1192,7 @@
 
 
 											</div>
-										</a>
+										</span>
 									</div>
 								</div>
 							</div>
@@ -1173,9 +1201,8 @@
 								data-id="4be7e02" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="#" class="ekit_global_links">
+										<a href="mailto:team@duradars.com" class="ekit_global_links">
 											<!-- end link opening -->
-
 											<div
 												class="elementskit-infobox text- text-left icon-lef-right-aligin elementor-animation- media  ">
 												<div class="elementskit-box-header elementor-animation-">
@@ -1200,7 +1227,7 @@
 								data-id="3f91672" data-element_type="widget" data-widget_type="elementskit-icon-box.default">
 								<div class="elementor-widget-container">
 									<div class="ekit-wid-con"> <!-- link opening -->
-										<a href="#" class="ekit_global_links">
+										<a href="tel:+919157705809" class="ekit_global_links">
 											<!-- end link opening -->
 
 											<div
