Service pages design changes

--- a/services/OSINT/index.html
+++ b/services/OSINT/index.html
@@ -908,32 +908,155 @@
 						<div class="elementor-widget-container">
 							<p>Our OSINT services help you gather actionable intelligence from publicly available sources, enabling you to monitor threats, track potential risks, and gain deeper insights into emerging threats.</p>
 							
-							<ul>
-								<li style="list-style: disc; color: #0693e3;">
-									Social Media Intelligence
-									<p style="color: #99999D;">Monitor social media platforms to track potential threats, misinformation, or security risks related to your business or industry.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Domain and WHOIS Lookup
-									<p style="color: #99999D;">We analyze domain registrations and WHOIS data to identify potentially malicious actors and gain insight into domain-related risks.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Public Data Scraping
-									<p style="color: #99999D;">Our public data scraping services help you gather valuable information from public sources to support investigations and intelligence gathering.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Geospatial Intelligence
-									<p style="color: #99999D;">Geospatial intelligence involves analyzing geographic data to uncover insights related to your business. We help you leverage mapping and location-based data to track threats and risks.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Dark Web Intelligence
-									<p style="color: #99999D;">The dark web is a hotspot for illegal activities. Our dark web intelligence services track down threats like data breaches, leaked information, and potential security risks lurking in this hidden online space.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Search Engine Intelligence
-									<p style="color: #99999D;">We use search engines to collect intelligence on vulnerabilities, potential security incidents, and emerging threats that could impact your organization.</p>
-								</li>
-							</ul>
+
+							<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
+							data-element_type="container" style="margin-top: 15px;">
+							<div
+								class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Social Media Intelligence</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												Monitor social media platforms to track potential threats, misinformation, or security risks related to your business or industry.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div
+								class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Domain and WHOIS Lookup</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												We analyze domain registrations and WHOIS data to identify potentially malicious actors and gain insight into domain-related risks.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
+							data-element_type="container" style="margin-top: 15px;">
+							<div
+								class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Public Data Scraping</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												Our public data scraping services help you gather valuable information from public sources to support investigations and intelligence gathering.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div
+								class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Geospatial Intelligence</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												Geospatial intelligence involves analyzing geographic data to uncover insights related to your business. We help you leverage mapping and location-based data to track threats and risks.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
+							data-element_type="container" style="margin-top: 15px;">
+							<div
+								class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Dark Web Intelligence</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												The dark web is a hotspot for illegal activities. Our dark web intelligence services track down threats like data breaches, leaked information, and potential security risks lurking in this hidden online space.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+
+							<div
+							class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+							data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
+							<div class="elementor-widget-container">
+								<div class="elementor-icon-box-wrapper">
+
+
+									<div class="elementor-icon-box-content">
+
+										<h3 class="elementor-icon-box-title">
+											<span>Search Engine Intelligence</span>
+										</h3>
+
+										<p class="elementor-icon-box-description">
+											We use search engines to collect intelligence on vulnerabilities, potential security incidents, and emerging threats that could impact your organization.
+										</p>
+
+									</div>
+
+								</div>
+							</div>
+						</div>
+
+						</div>
+
 						</div>
 					</div>
 					<div
