--- a/services/Web-Development/index.html
+++ b/services/Web-Development/index.html
@@ -908,28 +908,133 @@
 						<div class="elementor-widget-container">
 							<p>A strong digital presence begins with a robust, user-friendly website. Our web development services are tailored to meet your business needs, ensuring performance, scalability, and a seamless user experience.</p>
 							
-							<ul>
-								<li style="list-style: disc; color: #0693e3;">
-									Custom Website Development
-									<p style="color: #99999D;">We build fully customized websites using modern frameworks and technologies, ensuring your site aligns with your brand and business goals.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Responsive Design
-									<p style="color: #99999D;">Our websites are designed to be fully responsive, offering optimal viewing and interaction experiences across all devices — desktops, tablets, and smartphones.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Web Application Development
-									<p style="color: #99999D;">From customer portals to internal dashboards, we develop scalable web applications tailored to your specific operational needs.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									Performance Optimization
-									<p style="color: #99999D;">We enhance website speed, reduce load times, and ensure your site runs smoothly under varying traffic levels through effective optimization techniques.</p>
-								</li>
-								<li style="list-style: disc; color: #0693e3;">
-									SEO & Accessibility Best Practices
-									<p style="color: #99999D;">Our development approach incorporates SEO-friendly structures and accessibility standards to improve visibility and ensure compliance with WCAG guidelines.</p>
-								</li>
-							</ul>
+							<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
+							data-element_type="container" style="margin-top: 15px;">
+							<div
+								class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Custom Website Development</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												We build fully customized websites using modern frameworks and technologies, ensuring your site aligns with your brand and business goals.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div
+								class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Responsive Design</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												Our websites are designed to be fully responsive, offering optimal viewing and interaction experiences across all devices — desktops, tablets, and smartphones.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
+							data-element_type="container" style="margin-top: 15px;">
+							<div
+								class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Web Application Development</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												From customer portals to internal dashboards, we develop scalable web applications tailored to your specific operational needs.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+							<div
+								class="elementor-element elementor-element-ff4921e elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="ff4921e" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>Performance Optimization</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												We enhance website speed, reduce load times, and ensure your site runs smoothly under varying traffic levels through effective optimization techniques.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="elementor-element elementor-element-9727257 e-con-full e-flex e-con e-child" data-id="9727257"
+							data-element_type="container" style="margin-top: 15px;">
+							<div
+								class="elementor-element elementor-element-9b0ca51 elementor-view-stacked elementor-shape-circle elementor-position-top elementor-mobile-position-top elementor-widget elementor-widget-icon-box"
+								data-id="9b0ca51" data-element_type="widget" data-widget_type="icon-box.default">
+								<div class="elementor-widget-container">
+									<div class="elementor-icon-box-wrapper">
+
+
+										<div class="elementor-icon-box-content">
+
+											<h3 class="elementor-icon-box-title">
+												<span>SEO & Accessibility Best Practices</span>
+											</h3>
+
+											<p class="elementor-icon-box-description">
+												Our development approach incorporates SEO-friendly structures and accessibility standards to improve visibility and ensure compliance with WCAG guidelines.
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+							</div>
+
+						</div>
+
+
+
 						</div>
 					</div>
 					<div
