--- a/about/index.html
+++ b/about/index.html
@@ -810,7 +810,7 @@
 														class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-58 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 														data-vertical-menu=750px><a href="/services/" style="color:#ffffff;"
 															class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Services &nbsp; <svg fill="#ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><path d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"/></svg> </a>
-														<ul class="elementskit-dropdown elementskit-submenu-panel" style="min-width: 350px;">
+														<ul class="elementskit-dropdown elementskit-submenu-panel" style="min-width: 350px; border-radius: 15px !important; overflow: hidden;">
 															<li id="menu-item-56"
 																class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
 																data-vertical-menu=750px><a href="/services/VAPT/"
@@ -837,11 +837,11 @@
 																	class=" dropdown-item">Web Development</a></li>
 														</ul>
 													</li>
-												<li id="menu-item-59"
+												<!-- <li id="menu-item-59"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-59 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="/process/"
 														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Process</a>
-												</li>
+												</li> -->
 												<li hidden id="menu-item-1861"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1861 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="#"
