--- a/services/Cybersecurity-Awareness-Campaign-and-Training/index.html
+++ b/services/Cybersecurity-Awareness-Campaign-and-Training/index.html
@@ -763,7 +763,7 @@
 															<path
 																d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z" />
 														</svg> </a>
-													<ul class="elementskit-dropdown elementskit-submenu-panel" style="min-width: 350px;">
+													<ul class="elementskit-dropdown elementskit-submenu-panel" style="min-width: 350px; border-radius: 15px !important; overflow: hidden;">
 														<li id="menu-item-56"
 															class="menu-item menu-item-type-post_type menu-item-object-page menu-item-56 nav-item elementskit-mobile-builder-content"
 															data-vertical-menu=750px><a href="/services/VAPT/" class=" dropdown-item">VAPT</a></li>
@@ -790,11 +790,11 @@
 																Development</a></li>
 													</ul>
 												</li>
-												<li id="menu-item-59"
+												<!-- <li id="menu-item-59"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-59 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="/process/"
 														class="ekit-menu-nav-link ekit-menu-dropdown-toggle">Process</a>
-												</li>
+												</li> -->
 												<li hidden id="menu-item-1861"
 													class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1861 nav-item elementskit-dropdown-has relative_position elementskit-dropdown-menu-default_width elementskit-mobile-builder-content"
 													data-vertical-menu=750px><a href="#"
